--- a/css.css
+++ b/css.css
@@ -4,8 +4,17 @@ body {
     color: #818181;
 }
 
-.container-fluid {
+.container-fluid{
     padding: 0px 50px 5px 50px;
+    text-align: center;
+}
+
+.row{
+    text-align: left;
+    margin: auto;
+    max-width: 1280px;
+    display: inline-block;
+    
 }
 
 footer {
