--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
-    color: #818181;
+    color: rgba(0,0,0,0.9);
 }
 
 .container-fluid{
@@ -12,7 +12,7 @@ body {
 .row{
     text-align: left;
     margin: auto;
-    max-width: 1280px;
+    max-width: 1440px;
     display: inline-block;
     
 }
@@ -424,6 +424,13 @@ textarea{
 
 hr.scroll-anchor {
     border-top: 1px solid rgba(0,0,0,0);
+}
+
+.self-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 /*button[type=submit] {
